--- a/templates/index.html
+++ b/templates/index.html
@@ -190,16 +190,11 @@
                 alt="Team Member 1"
               />
             </div>
-            <h3>John Cooper</h3>
-            <p class="role">AI Engineer</p>
-            <p class="bio">
-              Specializes in machine learning and AI algorithms with 5+ years of
-              experience in developing intelligent systems.
-            </p>
+            <h3>Kartik Gopal</h3>
             <div class="social-links">
-              <a href="#"><i class="fab fa-github"></i></a>
-              <a href="#"><i class="fab fa-linkedin"></i></a>
-              <a href="#"><i class="fas fa-envelope"></i></a>
+              <a href="https://github.com/kartikgopal01"><i class="fab fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/kartik-gopal-4552452a1/"><i class="fab fa-linkedin"></i></a>
+              <a href="https://www.instagram.com/_kartik_gopal_/?igsh=bHViaTgyN2syNTRy"><i class="fab fa-instagram"></i></a>
             </div>
           </div>
 
@@ -210,16 +205,12 @@
                 alt="Team Member 2"
               />
             </div>
-            <h3>Sarah Chen</h3>
-            <p class="role">Full Stack Developer</p>
-            <p class="bio">
-              Expert in modern web technologies and cloud architecture with a
-              passion for creating seamless user experiences.
-            </p>
+            <h3>Prerana Raykar</h3>
+            
             <div class="social-links">
               <a href="#"><i class="fab fa-github"></i></a>
               <a href="#"><i class="fab fa-linkedin"></i></a>
-              <a href="#"><i class="fas fa-envelope"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
           </div>
 
@@ -230,36 +221,26 @@
                 alt="Team Member 3"
               />
             </div>
-            <h3>Michael Ross</h3>
-            <p class="role">UX Designer</p>
-            <p class="bio">
-              Creative designer focused on user-centered design principles and
-              creating intuitive interfaces.
-            </p>
+            <h3>Bhoomika Naik</h3>
             <div class="social-links">
               <a href="#"><i class="fab fa-github"></i></a>
               <a href="#"><i class="fab fa-linkedin"></i></a>
-              <a href="#"><i class="fas fa-envelope"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
           </div>
 
           <div class="team-member">
             <div class="member-image">
               <img
-                src="https://img.icons8.com/nolan/64/user-default.png"
+                src="{{ url_for('static', filename='img/prathamesh.jpg') }}"
                 alt="Team Member 4"
               />
             </div>
-            <h3>Emma Wilson</h3>
-            <p class="role">Data Scientist</p>
-            <p class="bio">
-              Data analytics expert with deep knowledge in statistical analysis
-              and predictive modeling.
-            </p>
+            <h3>Prathamesh</h3>
             <div class="social-links">
               <a href="#"><i class="fab fa-github"></i></a>
               <a href="#"><i class="fab fa-linkedin"></i></a>
-              <a href="#"><i class="fas fa-envelope"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
           </div>
         </div>
