modified:   app.log 	modified:   app.py 	new file:   career_data.csv 	new file:   static/html/ai-engineer.html 	new file:   static/html/cloud.html 	new file:   static/html/ds.html 	new file:   static/html/fullstack.html 	new file:   static/html/network.html 	new file:   static/html/software.html 	modified:   templates/index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
                 <li>Python</li>
                 <li>Deep Learning</li>
               </ul>
-              <button class="learn-more">Learn More</button>
+            <a href="{{ url_for('static', filename='html/ai-engineer.html') }}">  <button class="learn-more" >Learn More</button></a>
             </div>
 
             <div class="career-card">
@@ -95,7 +95,7 @@
                 <li>Python</li>
                 <li>SQL</li>
               </ul>
-              <button class="learn-more">Learn More</button>
+              <a href="{{ url_for('static', filename='html/ds.html') }}">  <button class="learn-more" >Learn More</button></a>
             </div>
 
             <div class="career-card">
@@ -109,21 +109,21 @@
                 <li>Python</li>
                 <li>Java</li>
               </ul>
-              <button class="learn-more">Learn More</button>
+              <a href="{{ url_for('static', filename='html/software.html') }}">  <button class="learn-more" >Learn More</button></a>
             </div>
 
             <div class="career-card">
               <div class="career-icon">
-                <i class="fas fa-microchip"></i>
+                <i class="fa-solid fa-laptop-code"></i>
               </div>
-              <h3>Hardware Engineer</h3>
+              <h3>Fullstack Dev</h3>
               <p>Design and develop computer hardware and systems</p>
               <ul class="career-skills">
-                <li>Circuit Design</li>
-                <li>VHDL</li>
-                <li>Embedded Systems</li>
+                <li>Web Technologies</li>
+                <li>Frameworks</li>
+                <li>Database</li>
               </ul>
-              <button class="learn-more">Learn More</button>
+              <a href="{{ url_for('static', filename='html/fullstack.html') }}">  <button class="learn-more" >Learn More</button></a>
             </div>
 
             <div class="career-card">
@@ -137,7 +137,7 @@
                 <li>Cisco Systems</li>
                 <li>Network Security</li>
               </ul>
-              <button class="learn-more">Learn More</button>
+              <a href="{{ url_for('static', filename='html/network.html') }}">  <button class="learn-more" >Learn More</button></a>
             </div>
 
             <div class="career-card">
@@ -151,7 +151,7 @@
                 <li>Azure</li>
                 <li>Docker</li>
               </ul>
-              <button class="learn-more">Learn More</button>
+              <a href="{{ url_for('static', filename='html/cloud.html') }}">  <button class="learn-more" >Learn More</button></a>
             </div>
           </div>
         </section>
